--- a/jans/code/scripts/person_authn/user_registration/pages/login-template.xhtml
+++ b/jans/code/scripts/person_authn/user_registration/pages/login-template.xhtml
@@ -12,19 +12,19 @@
 		<link rel="icon" href="#{request.contextPath}/servlet/favicon"
 			type='image/x-icon' />
 		<link type="text/css" rel="stylesheet"
-			href="#{oxAuthConfigurationService.getCssLocation()}/style.css" />
+			href="#{webConfigurationService.getCssLocation()}/style.css" />
 		<link type="text/css" rel="stylesheet"
-			href="#{oxAuthConfigurationService.getCssLocation()}/bootstrap.min.css" />
+			href="#{webConfigurationService.getCssLocation()}/bootstrap.min.css" />
 		<link type="text/css" rel="stylesheet"
-			href="#{oxAuthConfigurationService.getCssLocation()}/font-awesome.css" />
+			href="#{webConfigurationService.getCssLocation()}/font-awesome.css" />
 		<link type="text/css" rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" />
 		<script type="text/javascript"
-			src="#{oxAuthConfigurationService.getJsLocation()}/jquery-3.4.1.min.js" />
+			src="#{webConfigurationService.getJsLocation()}/jquery-3.4.1.min.js" />
 		<script type="text/javascript"
-			src="#{oxAuthConfigurationService.getJsLocation()}/bootstrap.min.js" />
+			src="#{webConfigurationService.getJsLocation()}/bootstrap.min.js" />
 		<script type="text/javascript"
-			src="#{oxAuthConfigurationService.getJsLocation()}/platform.js" />
+			src="#{webConfigurationService.getJsLocation()}/platform.js" />
 		<style>
 
 body {
