--- a/jans/code/scripts/person_authn/casa/pages/login.xhtml
+++ b/jans/code/scripts/person_authn/casa/pages/login.xhtml
@@ -3,6 +3,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:b="http://bootsfaces.net/ui"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	template="/WEB-INF/incl/layout/login-template.xhtml">
 	<f:metadata>
@@ -18,35 +19,64 @@
 	<ui:define name="body">
 		<div class="container" style="text-align: center">
 			<h:panelGroup rendered="true">
+			<!--
+				<div class="login_bx_1"
+					style="border-radius: 10px; margin-top: 0px; background: white; border: 1px solid #008b8b;">-->
 					<div class="loginBox">
 					<div class="logo"></div>
 					<div style="height:100px"></div>
-					<h:form horizontal="true" id="loginForm" style="padding-top:30px; padding-left:70px;">
-						<h:inputText placeholder="Email" fieldId="loginForm:username" name="loginForm:username"
+					<!--
+					<div class="row">
+						<h:messages class="text-center"
+							style="color:#8b0000;margin:5px;margin-left:20px; font-size:2vw;"
+							infoClass="text-center" errorClass="text-center" />
+					</div>-->
+					<b:form horizontal="true" id="loginForm" style="padding-top:30px; padding-left:70px;">
+						<b:inputText placeholder="Email" fieldId="loginForm:username" name="loginForm:username"
 							required="true" colMd="10" labelColMd="2" autocomplete="off"
 							value="#{credentials.username}" styleClass="form-control"
 							style="width:100%;">
 							<f:facet name="prepend">
-								<h:icon name="user" />
+								<b:icon name="user" />
 							</f:facet>
-						</h:inputText>
-						<h:inputSecret placeholder="#{msgs['login.password']}" colMd="10"
+						</b:inputText>
+						<b:inputSecret placeholder="#{msgs['login.password']}" colMd="10"
 							fieldId="loginForm:password" name="loginForm:password" labelColMd="2" value="#{credentials.password}"
 							autocomplete="off" styleClass="form-control" tyle="width:100%">
 							<f:facet name="prepend">
-								<h:iconAwesome name="key" />
+								<b:iconAwesome name="key" />
 							</f:facet>
-						</h:inputSecret>
+						</b:inputSecret>
 						<div style="height:20px"></div>
+						<!--<div class="row">
+							<div class="col-sm-5 col-md-5">
+								<h:outputLabel styleClass="col-form-label"
+									for="rememberme" value="#{msgs['login.rememberMe']}" />
+							</div>
+							<div class="col-sm-2 col-md-2">
+								<input type="checkbox" value="rememberme" id="rememberme" name="rememberme" />
+							</div>
+						</div>-->
 						<div class="form-group row">
 							<div class="col-sm-offset-1 offset-md-1 col-sm-8 col-md-8">
-								<h:commandButton id="loginButton"
+								<b:commandButton id="loginButton"
 									style="background-color: #00BE79; color:white;"
 									styleClass="btn col-sm-12" value="    #{msgs['login.login']}"
 									onclick="checkRemembeMe()" iconAwesome="fa-sign-in"
 									action="#{authenticator.authenticate}" />
 							</div>
 						</div>
+						<!--<div class="form-group row">
+							<div class="col-sm-offset-3 offset-md-3 col-sm-7 col-md-7">
+								<div class="forgot_link">
+									<a href="/identity/person/passwordReminder.htm"
+										style="color: blue;"> <h:outputText
+											value="#{msgs['login.forgotYourPassword']}" />
+									</a>
+								</div>
+							</div>
+						</div>-->
+						
 						<div class="form-group row">
 								<div class="forgot_link col-sm-offset-1 offset-md-1 col-sm-8 col-md-8">
 									<a href="restv1/authorize?client_id=${param.client_id}&amp;scope=${param.scope}&amp;&amp;redirect_uri=${param.redirect_uri}&amp;response_type=code&amp;state=${param.state}&amp;nonce=${param.nonce}&amp;acr_values=ztrust-forgot_password" style="color: gray;">
@@ -59,7 +89,7 @@
 								</div>
 						</div>
 						<h:inputHidden id="platform" />
-					</h:form>
+					</b:form>
 					<div style="padding-left:7px;">
 						<div class="row">
 							<div class="col-md-5">
@@ -74,16 +104,16 @@
 					<div class="row" style="padding-top: 20px;">
                         <div class="col-sm-8"></div>
                         <div class="col-md-12">
-                            <h:form id="smartCardLogin" style="padding-left:60px;">
+                            <b:form id="smartCardLogin" style="padding-left:60px;">
                                 <div class="form-group row">
                                     <div class="offset-md-1 col-sm-12 col-md-12">
-                                        <h:commandButton  id="smartCardButton" style="background-color: #F55E3C; color:white;"
+                                        <b:commandButton  id="smartCardButton" style="background-color: #F55E3C; color:white;"
                                             styleClass="btn col-sm-8" iconAwesome="fas fa-id-card" type="button" onclick="window.location='restv1/authorize?client_id=${param.client_id}&amp;scope=${param.scope}&amp;redirect_uri=${param.redirect_uri}&amp;response_type=code&amp;state=${param.state}&amp;nonce=${param.nonce}&amp;acr_values=ztrust-cert';"
                                             value="Smart Card Login" />
                                     </div>
                                 </div>
                                 <h:inputHidden id="platform" />
-                            </h:form>
+                            </b:form>
                         </div>
                         <div class="col-sm-4"></div>
                     </div>
