feat: user_registration: register.py script has been updated (refactoring);

--- a/jans/code/scripts/person_authn/user_registration/pages/reg.xhtml
+++ b/jans/code/scripts/person_authn/user_registration/pages/reg.xhtml
@@ -45,7 +45,7 @@
                         </div>
                         <div class="row" id="familyName" style="margin-top: 5px;">
                             <div class="col-12" style="margin-top: 6px;">
-                                <input name="mnm" type="text" placeholder="Middle name" class="form-control" />
+                                <input name="mnm" type="text" placeholder="Middle name" class="form-control" autocomplete="off" />
                             </div>
                         </div>
                         <div class="row" id="mail" style="margin-top: 5px;">
