--- a/jans/code/scripts/person_authn/user_registration/pages/regtr.xhtml
+++ b/jans/code/scripts/person_authn/user_registration/pages/regtr.xhtml
@@ -35,12 +35,12 @@
                         <p style="text-align: left">All fields are required</p>
                         <div class="row" id="givenName" style="margin-top: 5px;">
                             <div class="col-12" style="margin-top: 6px;">
-                                <input name="fnm" type="text" placeholder="First name" value="#{identity.getWorkingParameter('vufnm')}" class="form-control" autocomplete="off" required="true" />
+                                <input name="fnm" type="text" placeholder="First name" value="#{identity.getWorkingParameter('vufnm')}" class="form-control" autocomplete="off" />
                             </div>
                         </div>
                         <div class="row" id="sn" style="margin-top: 5px;">
                             <div class="col-12" style="margin-top: 6px;">
-                                <input name="lnm" type="text" placeholder="Last name" value="#{identity.getWorkingParameter('vulnm')}" class="form-control" autocomplete="off" required="true" />
+                                <input name="lnm" type="text" placeholder="Last name" value="#{identity.getWorkingParameter('vulnm')}" class="form-control" autocomplete="off" />
                             </div>
                         </div>
                         <div class="row" id="familyName" style="margin-top: 5px;">
